# profanex

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci_cd.yaml
docker/: Dockerfile  docker-compose-test.yaml
scripts/: benchmark_clean_parallel.py  benchmark_has_profanity_parallel.py  example.py  sample_reviews.txt
tests/: conftest.py  test_filter.py  test_filter_debug.py  test_filter_manual.py  test_has_profanity.py  test_mask_style.py  test_performance_sanity.py  test_yaml.py
tests/data/: banned_words.yaml
